tests/unit/fake_data_root/sos_commands/networking/ip_netns_exec_qrouter-1e086be2-93c2-4740-921d-3e3237f23959_iptables-save
# Generated by iptables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*raw
:PREROUTING ACCEPT [89790:137834218]
:OUTPUT ACCEPT [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
# Generated by iptables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*nat
:PREROUTING ACCEPT [45:3415]
:INPUT ACCEPT [1:325]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1:84]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-float-snat - [0:0]
:neutron-l3-agent-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A neutron-l3-agent-POSTROUTING ! -o rfp-1e086be2-9 -m conntrack ! --ctstate DNAT -j ACCEPT
-A neutron-l3-agent-PREROUTING -d 169.254.169.254/32 -i qr-+ -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 9697
-A neutron-l3-agent-PREROUTING -d 10.100.0.242/32 -i rfp-1e086be2-9 -j DNAT --to-destination 192.168.21.8
-A neutron-l3-agent-PREROUTING -d 10.100.0.213/32 -i rfp-1e086be2-9 -j DNAT --to-destination 192.168.21.42
-A neutron-l3-agent-float-snat -s 192.168.21.8/32 -j SNAT --to-source 10.100.0.242 --random-fully
-A neutron-l3-agent-float-snat -s 192.168.21.42/32 -j SNAT --to-source 10.100.0.213 --random-fully
-A neutron-l3-agent-snat -j neutron-l3-agent-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-l3-agent-snat
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
# Generated by iptables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*mangle
:PREROUTING ACCEPT [89790:137834218]
:INPUT ACCEPT [12:3972]
:FORWARD ACCEPT [89778:137830246]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [89778:137830246]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-float-snat - [0:0]
:neutron-l3-agent-floatingip - [0:0]
:neutron-l3-agent-mark - [0:0]
:neutron-l3-agent-scope - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-mark
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-scope
-A neutron-l3-agent-PREROUTING -m connmark ! --mark 0x0/0xffff0000 -j CONNMARK --restore-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-floatingip
-A neutron-l3-agent-PREROUTING -d 169.254.169.254/32 -i qr-+ -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x1/0xffff
-A neutron-l3-agent-float-snat -m connmark --mark 0x0/0xffff0000 -j CONNMARK --save-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-l3-agent-scope -i qr-aa623763-fd -j MARK --set-xmark 0x4000000/0xffff0000
-A neutron-l3-agent-scope -i rfp-1e086be2-9 -j MARK --set-xmark 0x4000000/0xffff0000
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
# Generated by iptables-save v1.8.4 on Tue Aug  3 10:32:11 2021
*filter
:INPUT ACCEPT [12:3972]
:FORWARD ACCEPT [89778:137830246]
:OUTPUT ACCEPT [0:0]
:neutron-filter-top - [0:0]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-local - [0:0]
:neutron-l3-agent-scope - [0:0]
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-filter-top -j neutron-l3-agent-local
-A neutron-l3-agent-FORWARD -j neutron-l3-agent-scope
-A neutron-l3-agent-INPUT -m mark --mark 0x1/0xffff -j ACCEPT
-A neutron-l3-agent-INPUT -p tcp -m tcp --dport 9697 -j DROP
-A neutron-l3-agent-scope -o qr-aa623763-fd -m mark ! --mark 0x4000000/0xffff0000 -j DROP
-A neutron-l3-agent-scope -o rfp-1e086be2-9 -m mark ! --mark 0x4000000/0xffff0000 -j DROP
COMMIT
# Completed on Tue Aug  3 10:32:11 2021
